--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,64 @@
+.traffic-light-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 35rem;
+}
+.traffic-light {
+    background-color: black;
+    padding: 10px;
+    display: inline-block;
+    border-radius: 10px;
+}
 
-/* 
+.light-red {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: red;
+   
+    
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+}
 
-*/
+.light-orange {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color:orange;
+    
+
+}
+
+.light-green {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: green ;
+    
+
+}
+
+.light.active {
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.7), 
+                0 0 40px rgba(255, 255, 255, 0.7), 
+                0 0 60px rgba(255, 255, 255, 0.7);
+}
+
+  .toggle-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    background-color: #007bff;
+    position: absolute;
+    bottom: 5rem;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.toggle-button:hover {
+    background-color: #0056b3;
+}
+    
